--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ section h1 {
   background-color: #1a1e1f;
   transition: background-color 0.4s ease;
   color: white;
-  height: 100px;
+  min-height: 80px;
   align-items: center;
   z-index: 1000;
 }
@@ -51,7 +51,7 @@ section h1 {
 
 .container {
   padding: 2rem;
-  max-width: 80%;
+  max-width: 980px;
   margin-inline: auto;
   color: white;
 }
@@ -92,16 +92,16 @@ section h1 {
   background: url("./assets/hero.png.webp") center no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 500px;
+  min-height: 450px;
 }
 
 .hero__desc {
   display: flex;
+  height: 100%;
   flex-direction: column;
   color: white;
-  font-family: "Inter";
-  min-height: 400px;
-  justify-content: center;
+  justify-content: flex-end;
+  min-height: 300px;
 }
 
 .hero__desc h1 {
